Use bash in script. Required for pipefail

--- a/README
+++ b/README
@@ -1,11 +1,14 @@
 Maybe increment VERSION here, and if so, update release.json to match.
 
-VERSION=0000000000
-RELEASE_VERSION=0.9.0-rc4
+VERSION=0000000001
+RELEASE_VERSION=0.9.0-rc5
 START="s3://meteor-warehouse/tools/$VERSION/meteor-tools-$VERSION"
 tar czvf meteor-tools-$VERSION-Darwin_x86_64.tar.gz fake-tool/bin/meteor
 s3cmd -P put meteor-tools-$VERSION-Darwin_x86_64.tar.gz s3://meteor-warehouse/tools/$VERSION/
 s3cmd -P cp "$START-Darwin_x86_64.tar.gz" "$START-Linux_x86_64.tar.gz"
 s3cmd -P cp "$START-Darwin_x86_64.tar.gz" "$START-Linux_i686.tar.gz"
+
 cp release.json ${RELEASE_VERSION}.release.json
 s3cmd -P put ${RELEASE_VERSION}.release.json s3://meteor-warehouse/releases/
+cp release.json METEOR-CORE@${RELEASE_VERSION}.release.json
+s3cmd -P put METEOR-CORE@${RELEASE_VERSION}.release.json s3://meteor-warehouse/releases/
