--- a/README
+++ b/README
@@ -13,5 +13,5 @@ s3cmd -P cp "$START-Darwin_x86_64.tar.gz" "$START-Linux_i686.tar.gz"
 
 cp release.json ${RELEASE_VERSION}.release.json
 s3cmd -P put ${RELEASE_VERSION}.release.json s3://meteor-warehouse/releases/
-cp release.json METEOR-CORE@${RELEASE_VERSION}.release.json
-s3cmd -P put METEOR-CORE@${RELEASE_VERSION}.release.json s3://meteor-warehouse/releases/
+cp release.json METEOR@${RELEASE_VERSION}.release.json
+s3cmd -P put METEOR@${RELEASE_VERSION}.release.json s3://meteor-warehouse/releases/
