--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-If you actually changed the script, update VERSION to a random text-character
+If you actually changed the script, update VERSION to a random ten-character
 hex string here, and update release.json to match. (release.json! Not the other
 files you have sitting around still)
 
 Then:
 
-$ VERSION=8301fde275 RELEASE_VERSION=0.9.0-rc12 ./push.sh
+$ VERSION=381da7e862 RELEASE_VERSION=1.0-rc.4 ./push.sh
